syntax = "proto3";

package tanagra.configschema;

option go_package = "github.com/DataBiosphere/tanagra/criteriaselector/configschemapb";
option java_package = "bio.terra.tanagra.proto.criteriaselector.configschema";
option java_outer_classname = "CFUnhintedValue";

message UnhintedValue {
  bool group_by_count = 1;
  string attribute = 2;
}
